5.0b1 -> 5.0b2:
    - rpm.org: Add python method for for retrieving (without setting) ts vsflags.
    - jbj: re-enable preferring rpmnss (if WITH_NSS is defined).
    - jbj: fix: --rebuilddb needs an explicit open for Pubkeys lookup.
    - rpm.org: Register the new SCRIPT_ERROR callback value to python.
    - jbj: leave behind the heavy duty debugging goop for the next --qf buggery.
    - jbj: fix: consume the escaped character after copy, wotta pita.
    - jbj: simplify *Format routines, he->p is now reliably populated and const.
    - jbj: rewrite shescapeFormat to count # escapes needed, not sloppy realloc.
    - jbj: add debugging hack to test a hypothesis re rpm-5.0beta1 segfault.
    - jbj: Leopard claims to have functional stat64. Let's find out ...

5.0a4 -> 5.0b1:
    - rpm.org: Yet More RPMRC_OK returns from functions.
    - rpm.org: use RPMRC_OK, not 0, returns in many functions.
    - rpm.org: @return, not @returns, in doxygen markup.
    - rpm.org: Don't do tilde expansion if HOME not set.
    - rpm.org: Add RPMCALLBACK_SCRIPT_ERROR callback type (not the best fix).
    - jbj: relax the current header sanity checks, permit 1Gb headers.
    - jbj: refactor some final \n out of msgs into rpmlog format instead.
    - jbj: add global pgpDigVSFlags, nuke unused pgpDig{Get,Set}VSFlags.
    - jbj: punt on minor issues for beta1.
    - jbj: rpm2cpio: fail http/https transport attempts with error.
    - jbj: install /usr/bin/rpm2cpio executable.
    - jbj: install /usr/lib/rpm/rpm2cpio shell script.
    - jbj: install /usr/lib/rpm/vcheck.
    - jbj: RPMTAG_TRACK tag is being added to srpms.
    - jbj: fix: display canonical "Headeri18ntable" tag name correctly.
    - jbj: pop RPMTAG_TRACK work-in-progress into CVS. push "segfault on HEAD".
    - jbj: stub in Requires: sanitycheck(N) probe. needs to run the script, duh.
    - jbj: drill sanitycheck exec into psmStage() like %verifyscript.