@@ -4,7 +4,8 @@
 
 #include "system.h"
 #include <stdarg.h>
-#include "rpmlog.h"
+#define	_RPMLOG_INTERNAL
+#include <rpmlog.h>
 #include "debug.h"
 
 /*@access rpmlogRec @*/
